--- a/presentation/templates/couchdb.html
+++ b/presentation/templates/couchdb.html
@@ -1,3 +1,72 @@
 <div id="couchdb" data-title="CouchDB" data-timer="true" data-lang="couchdb" class="step slide">
     <q></q>
 </div>
+
+<div id="couchdb-intro" data-title="Introduction" data-timer="true" data-lang="couchdb" class="step slide">
+    <q>
+      <ul>
+        <li>Initial release in 2005</li>
+        <li>Created by Damien Katz</li>
+        <li>Apache project in 2008</li>
+        <li>Written in Erlang</li>
+      </ul>
+      Couch is an acronym for <em>c</em>luster <em>o</em>f <em>u</em>nreliable <em>c</em>ommodity <em>h</em>ardware
+    </q>
+</div>
+
+<div id="couchdb-resources" data-title="Resources" data-timer="true" data-lang="couchdb" class="step slide">
+    <q>
+      <ul>
+        <li>Homepage: <a href="http://couchdb.apache.org" target="_blank">couchdb.apache.org</a></li>
+        <li>Wiki: <a href="http://wiki.apache.org/couchdb/" target="_blank">wiki.apache.org/couchdb/</a></li>
+        <li>Book: <a href="http://guide.couchdb.org" target="_blank">guide.couchdb.org</a></li>
+      </ul>
+    </q>
+</div>
+
+<div id="couchdb-basics" data-title="Basics" data-timer="true" data-lang="couchdb" class="step slide">
+    <q>
+      <ul>
+        <li>NoSQL database</li>
+        <li>JSON document store</li>
+        <li>JS to query with MapReduce</li>
+        <li>RESTful HTTP API</li>
+        <li>Open Source</li>
+      </ul>
+    </q>
+</div>
+
+<div id="couchdb-features" data-title="Core Features" data-timer="true" data-lang="couchdb" class="step slide">
+    <q>
+      <ul>
+        <li>Easy Replication</li>
+        <li>Futon: web-based admin gui</li>
+      </ul>
+    </q>
+</div>
+
+<div id="couchdb-why" data-title="Pros and Cons" data-timer="true" data-lang="couchdb" class="step slide">
+    <q>
+      <h3>Pros:</h3>
+      <ul>
+        <li>Easy to understand and use</li>
+        
+      </ul>
+      <h3>Cons:</h3>
+      <ul>
+        <li>It’s losing steam</li>
+      </ul>
+    </q>
+</div>
+
+<div id="couchdb-setup" data-title="Set Up" data-timer="true" data-lang="couchdb" class="step slide">
+    <q>
+      
+    </q>
+</div>
+
+<div id="couchdb-example" data-title="Example" data-timer="true" data-lang="couchdb" class="step slide">
+    <q>
+      
+    </q>
+</div>
