--- a/presentation/css/impress-demo.css
+++ b/presentation/css/impress-demo.css
@@ -34,7 +34,7 @@ a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
-dl, dt, dd, ol, ul, li,
+dl, dt, dd,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
@@ -57,8 +57,12 @@ footer, header, hgroup, menu, nav, section {
 body {
     line-height: 1;
 }
-ol, ul {
-    list-style: none;
+/*ol, ul {*/
+    /*list-style: none;*/
+/*}*/
+li {
+    padding-top: 15px;
+    padding-left: 10px;
 }
 blockquote, q {
     quotes: none;
