--- a/presentation/templates/voltdb.html
+++ b/presentation/templates/voltdb.html
@@ -1,3 +1,85 @@
 <div id="voltdb" data-title="VoltDB" data-timer="true" data-lang="voltdb" class="step slide">
     <q></q>
 </div>
+
+<div id="voltdb-intro" data-title="VoltDB Introduction" data-timer="true" data-lang="voltdb" class="step slide">
+    <q>
+      <ul>
+        <li>First release May 2010</li>
+        <li>GPL3 Community Edition</li>
+        <li>Enterprise Edition</li>
+      </ul>
+        Productization of the H-Store project created by MIT, Brown, Yale, and HP Labs
+    </q>
+</div>
+
+<div id="voltdb-who" data-title="Who’s behind it?" data-timer="true" data-lang="voltdb" class="step slide">
+  <q>
+    <ul>
+      <li>Michael Stonebraker<br>➜ Ingres, Postgres, Vertica, SciDB</li>
+      <li>Sam Madden<br>➜ Vertica, SciDB, MIT</li>
+      <li>Daniel Abadi<br>➜ Vertica, Hadapt, Yale</li>
+    </ul>
+  </q>
+</div>
+
+<div id="voltdb-what" data-title="What is it?" data-timer="true" data-lang="voltdb" class="step slide">
+  <q>
+    <ul>
+      <li>NewSQL RDBMS</li>
+      <li>Written in Java/C++</li>
+      <li>In-memory</li>
+      <li>SQL/Java Stored Procs</li>
+      <li>Single threaded</li>
+    </ul>
+  </q>
+</div>
+
+<div id="voltdb-features" data-title="Features" data-timer="true" data-lang="voltdb" class="step slide">
+  <q>
+    <ul>
+      <li>Linear scaling</li>
+      <li>Built-in horizontal replication</li>
+      <li>SQL interface</li>
+      <li>ACID over whole cluster</li>
+    </ul>
+  </q>
+</div>
+
+<div id="voltdb-platforms-clients" data-title="Platforms & Clients" data-timer="true" data-lang="voltdb" class="step slide">
+  <q>
+    <ul>
+      Platforms
+      <li>Linux (CentOS V5.6)</li>
+      <li>Mac OS X (Dev Only)</li>
+    </ul>
+    <ul>
+      Clients
+      <li>Java, C++, C#, PHP, Python, Node.js, Ruby, Erlang</li>
+    </ul>
+  </q>
+</div>
+
+<div id="voltdb-uses" data-title="What’s it good for?" data-timer="true" data-lang="voltdb" class="step slide">
+  <q>
+    <ul>
+      <li>High velocity</li>
+      <li>Transactional consistency</li>
+    </ul>
+    <ul>
+      <li>Financial/Trade</li>
+      <li>Online Games</li>
+      <li>Network Security</li>
+    </ul>
+  </q>
+</div>
+
+<div id="voltdb-setup" data-title="Set up" data-timer="true" data-lang="voltdb" class="step slide">
+  <q>
+  </q>
+</div>
+
+<div id="voltdb-example" data-title="Example" data-timer="true" data-lang="voltdb" class="step slide">
+  <q>
+  </q>
+</div>
