HBase slide, local setup, heroku test.

--- a/presentation/templates/hbase.html
+++ b/presentation/templates/hbase.html
@@ -1,3 +1,85 @@
 <div id="hbase" data-title="HBase" data-timer="true" data-lang="hbase" class="step slide">
-    <q></q>
+    <q>
+      <div style="height: 100px"></div>
+      <p>
+        <img src="images/hbase_logo.png">
+      <p>
+    </q>
+</div>
+
+<div id="hbase-intro" data-title="Introduction" data-timer="true" data-lang="hbase" class="step slide">
+  <q>
+    <ul>
+      <li>Released in 2008 as Hadoop sub-project</li>
+      <li>Open Source</li>
+      <li>Written in Java</li>
+      <li>Implementation of Google’s BigTable</li>
+    </ul>
+  </q>
+</div>
+
+<div id="hbase-bigtable" data-title="BigTable" data-timer="true" data-lang="hbase" class="step slide">
+  <q>
+    A Bigtable is a sparse, distributed, persistent multidimensional sorted map.
+    <br><br>
+    <a href="http://research.google.com/archive/bigtable.html" target="_blank">"Bigtable: A Distributed Storage System for Structured Data"</a>
+    <br>
+    Chang et al. (2006)
+  </q>
+</div>
+
+<div id="hbase-wat" data-title="Wat" data-timer="false" data-lang="hbase" class="step slide">
+  <q>
+    <p><img src="images/wat.jpg"></p>
+  </q>
+</div>
+
+<div id="hbase-details" data-title="Details" data-timer="true" data-lang="hbase" class="step slide">
+  <q>
+    <ul>
+      <li>Columnar Store</li>
+      <li>Big Data: billions of rows X millions of columns</li>
+      <li>Distributed on commodity hardware (no Exadata needed)</li> 
+      <li>Strict consistency</li>
+    </ul>
+  </q>
+</div>
+
+<div id="hbase-mapreduce" data-title="How do I get data out?" data-timer="true" data-lang="hbase" class="step slide">
+  <q>
+    <p>
+      <img src="images/mapreduce.png" alt="Map Reduce">
+    </p>
+  </q>
+</div>
+
+<div id="hbase-protocols" data-title="Protocols" data-timer="true" data-lang="hbase" class="step slide">
+  <q>
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Connection Method</th>
+      </tr>
+      <tr>
+        <td>Shell</td>
+        <td>Direct</td>
+      </tr>
+      <tr>
+        <td>Java API</td>
+        <td>Direct</td>
+      </tr>
+      <tr>
+        <td>Thrift</td>
+        <td>Binary protocol</td>
+      </tr>
+      <tr>
+        <td>REST</td>
+        <td>HTTP</td>
+      </tr>
+      <tr>
+        <td>Avro</td>
+        <td>Binary protocol</td>
+      </tr>
+    </table>
+  </q>
 </div>
