--- a/presentation/templates/marklogic.html
+++ b/presentation/templates/marklogic.html
@@ -92,6 +92,15 @@
   </q>
 </div>
 
+<div id="marklogic-client-search" data-title="Client API JSON" data-timer="true" data-lang="marklogic" class="step slide">
+  <q>
+    <ul>
+      <li>/v1/keyvalue?element=TITLE&value=Cymbeline</li>
+      <li>/v1/search/?q=infinite NEAR variety'</li>
+    </ul>
+  </q>
+</div>
+
 <div id="marklogic-client-json" data-title="Client API JSON" data-timer="true" data-lang="marklogic" class="step slide">
   <q>
     <ul>
