--- a/presentation/templates/neo4j.html
+++ b/presentation/templates/neo4j.html
@@ -1,3 +1,82 @@
 <div id="neo4j" data-title="Neo4j" data-lang="neo4j" data-timer="true" class="step slide">
+    <q>
+        <p>
+            <br>
+            <img src="/images/neo4j.png" alt="Neo4j" width="300">
+        </p>
+    </q>
+</div>
+
+<div id="neo4j-basic" data-title="Introduction" data-lang="neo4j" data-timer="true" class="step slide">
+    <q>
+        Embedded, disk-based, fully transactional Java persistence engine that stores data structures in graphs rather than in tables.
+    </q>
+</div>
+
+<div id="neo4j-other-words" data-title="In Other Words" data-lang="neo4j" data-timer="true" class="step slide">
+    <q>
+        It's "white-board" friendly.
+    </q>
+</div>
+
+<div id="neo4j-quote" data-title="Graph Theory" data-lang="neo4j" data-timer="true" class="step slide">
+    <q>"In many cases, if you can formulate what you're working on as a graph problem, you're (at least) halfway to a solution."
+        <br> - Magnus Lie Hetland
+    </q>
+</div>
+
+<div id="neo4j-history" data-title="History" data-lang="neo4j" data-timer="true" class="step slide">
+    <q>
+        <ul>
+            <li>Released February 2010</li>
+            <li>Rod Johnson on Board of Directors</li>
+        </ul>
+    </q>
+</div>
+
+<div id="neo4j-setup" data-title="Setup" data-lang="neo4j" data-timer="true" class="step slide">
+    <q>
+        Community Edition (embedded, use Maven)
+        <ul>
+            <li>Linux (Debian based):<br> <code>apt-get install neo4j</code></li>
+            <li>OSX: <code>brew install neo4j</code></li>
+            <li>Windows: ?</li>
+        </ul>
+    </q>
+</div>
+
+<div id="neo4j-access" data-title="Access" data-lang="neo4j" data-timer="true" class="step slide">
+    <q>
+        <ul>
+            <li>Java code</li>
+            <li>REST</li>
+            <li>Cypher (more SQL-like)</li>
+            <li>Ruby console</li>
+            <li>Gremlin</li>
+        </ul>
+    </q>
+</div>
+
+<div id="neo4j-rest" data-title="REST" data-lang="neo4j" data-timer="true" class="step slide">
     <q></q>
 </div>
+
+<div id="neo4j-gremlin" data-title="Gremlin" data-lang="neo4j" data-timer="true" class="step slide">
+    <q>Graphical traversal language written in Groovy.  It's declarative, domain-specific language (like SQL).</q>
+</div>
+
+<div id="neo4j-example" data-title="Example" data-lang="neo4j" data-timer="true" class="step slide">
+    <q>
+        <p>Kevin Bacon algorithm</p>
+    </q>
+</div>
+
+<div id="neo4j-books" data-title="Books" data-lang="neo4j" data-timer="true" class="step slide">
+    <q>
+        <ul>
+            <li>Seven Databases in Seven Weeks</li>
+            <li>Neo4j In Action</li>
+        </ul>
+    </q>
+</div>
+
