last bit of polish on slides

--- a/presentation/templates/marklogic.html
+++ b/presentation/templates/marklogic.html
@@ -21,8 +21,8 @@
           <li>API docs</li>
           <li>Free, trial download/license</li>
         </ul>
-        <li>devpedia (GET URL)</li>
-        <li>archipedia (GET URL)</li>
+        <li>devpedia</li>
+        <li>archipedia</li>
       </ul>
     </q>
 </div>
