--- a/presentation/templates/redis.html
+++ b/presentation/templates/redis.html
@@ -16,11 +16,8 @@
     <q>
       <ul>
         <li>Homepage: <a href="redis.io">redis.io</a> </li>
-        <li>
-          Great Tutorial: 
-          <a href="http://blog.mjrusso.com/2010/10/17/redis-from-the-ground-up.html#heading_toc_j_0">
-            http://blog.mjrusso.com/2010/10/17/redis-from-the-ground-up.html#heading_toc_j_0
-          </a> 
+        <li>Try online: 
+        <a href="http://try.redis-db.com/">http://try.redis-db.com/</a>
         </li>
       </ul>
     </q>
@@ -70,54 +67,6 @@
       <ul>
         <li>COMMAND arg1 arg2 arg3</li>
         <li>db.command(arg1, arg2, arg3);</li>
-      </ul>
-    </q>
-</div>
-
-<div id="redis-strings" data-title="Strings" data-timer="true" data-lang="redis" class="step slide">
-    <q>
-      <ul>
-        <li>GET key</li>
-        <li>SET key value</li>
-        <li>[INCR|DECR] key</li>
-        <li>[INCRBY|DECRBY] key amount</li>
-        <li>Atomic increment!</li>
-        <li>INCR newKey => SET newKey 1</li>
-      </ul>
-    </q>
-</div>
-
-<div id="redis-expire" data-title="Expire/TTL" data-timer="true" data-lang="redis" class="step slide">
-    <q>
-      <ul>
-        <li>Expire key seconds</li>
-        <li>TTL key</li>
-        <li>Easy session storage</li>
-      </ul>
-    </q>
-</div>
-
-<div id="redis-lists" data-title="Lists" data-timer="true" data-lang="redis" class="step slide">
-    <q>
-      <ul>
-        <li>[LPUSH|RPUSH] listname item</li>
-        <li>LLEN listname</li>
-        <li>[LPOP|RPOP] list</li>
-        <li>LRANGE list start end</li>
-        <li>LRANGE list 0 -1</li>
-      </ul>
-    </q>
-</div>
-
-<div id="redis-sets" data-title="Sets" data-timer="true" data-lang="redis" class="step slide">
-    <q>
-      <ul>
-        <li>SADD setname item</li>
-        <li>SREM setname item</li>
-        <li>SISMEMBER setname item</li>
-        <li>SUNION set1 set2</li>
-        <li>SINTER set1 set2</li>
-        <li>SINTERSTORE set1 set2 newset</li>
       </ul>
     </q>
 </div>
