Images, links, demos, and polish.

--- a/presentation/templates/couchdb.html
+++ b/presentation/templates/couchdb.html
@@ -1,5 +1,10 @@
 <div id="couchdb" data-title="CouchDB" data-timer="true" data-lang="couchdb" class="step slide">
-    <q></q>
+    <q>
+      <p>
+        <img src="images/couch.png" alt="CouchDB"><br>
+        Relax
+      </p>
+    </q>
 </div>
 
 <div id="couchdb-intro" data-title="Introduction" data-timer="true" data-lang="couchdb" class="step slide">
@@ -31,6 +36,7 @@
         <li>JSON document store</li>
         <li>JS to query with MapReduce</li>
         <li>RESTful HTTP API</li>
+        <li>CouchApps</li>
         <li>Open Source</li>
       </ul>
     </q>
@@ -38,6 +44,10 @@
 
 <div id="couchdb-features" data-title="Core Features" data-timer="true" data-lang="couchdb" class="step slide">
     <q>
+      <code style="font-size: 70%">
+        POST /_replicate 
+        {"source":"a-db", "target":"b-db"}
+      </code>
       <ul>
         <li>Easy Replication</li>
         <li>Futon: web-based admin gui</li>
@@ -45,28 +55,21 @@
     </q>
 </div>
 
-<div id="couchdb-why" data-title="Pros and Cons" data-timer="true" data-lang="couchdb" class="step slide">
+<div id="couchdb-why" data-title="Pro and Con" data-timer="true" data-lang="couchdb" class="step slide">
     <q>
-      <h3>Pros:</h3>
       <ul>
+        Pro:
         <li>Easy to understand and use</li>
-        
       </ul>
-      <h3>Cons:</h3>
       <ul>
+        Con:
         <li>It’s losing steam</li>
       </ul>
     </q>
 </div>
 
-<div id="couchdb-setup" data-title="Set Up" data-timer="true" data-lang="couchdb" class="step slide">
-    <q>
-      
-    </q>
-</div>
-
 <div id="couchdb-example" data-title="Example" data-timer="true" data-lang="couchdb" class="step slide">
     <q>
-      
+      <p><a href="https://github.com/milespomeroy/couch-admin-tools"><img src="images/couch-console.png" alt="Couch Console"></a></p>
     </q>
 </div>
