--- a/presentation/templates/hbase.html
+++ b/presentation/templates/hbase.html
@@ -2,7 +2,7 @@
     <q>
       <div style="height: 100px"></div>
       <p>
-        <img src="images/hbase_logo.png" alt="HBase">
+        <a href="http://hbase.apache.org"><img src="images/hbase_logo.png" alt="HBase"></a>
       <p>
     </q>
 </div>
@@ -122,5 +122,15 @@
 
 <div id="hbase-example" data-title="Example" data-timer="true" data-lang="hbase" class="step slide">
   <q>
+  </q>
+</div>
+
+<div id="hbase-books" data-title="Books and Links" data-timer="true" data-lang="hbase" class="step slide">
+  <q>
+      <a href="http://pragprog.com/book/rwdata/seven-databases-in-seven-weeks">Seven Databases in Seven Weeks — Eric Redmond and Jim R. Wilson</a>
+      <br>
+      <a href="http://hbase.apache.org">HBase Home</a>
+      <br>
+      <a href="http://wiki.apache.org/hadoop/Hbase">HBase Wiki</a>
   </q>
 </div>
