--- a/presentation/templates/voltdb.html
+++ b/presentation/templates/voltdb.html
@@ -1,5 +1,8 @@
 <div id="voltdb" data-title="VoltDB" data-timer="true" data-lang="voltdb" class="step slide">
-    <q></q>
+    <q>
+      <div style="height: 200px"></div>
+      <p><a href="http://voltdb.com"><img src="images/voltdb.png" alt="VoltDB"></a></p>
+    </q>
 </div>
 
 <div id="voltdb-intro" data-title="VoltDB Introduction" data-timer="true" data-lang="voltdb" class="step slide">
@@ -43,6 +46,10 @@
       <li>SQL interface</li>
       <li>ACID over whole cluster</li>
     </ul>
+    
+    <a href="http://voltdb.com/company/blog/695k-tps-nodejs-and-voltdb" style="font-size: 1em">695k TPS on 12 nodes on EC2</a>
+    <br>
+    <a href="http://voltdb.com/company/blog/sgivoltdb-benchmark-more-details" style="font-size: 1em">3.4 million TPS on 30 nodes.</a>
   </q>
 </div>
 
@@ -76,10 +83,17 @@
 
 <div id="voltdb-setup" data-title="Set up" data-timer="true" data-lang="voltdb" class="step slide">
   <q>
+    <p><img src="images/voltdb-components.png" alt="VoltDB Components"></p>
+    <a href="http://voltdb.com/products-services/downloads">Getting Started with VoltDB</a>
   </q>
 </div>
 
 <div id="voltdb-example" data-title="Example" data-timer="true" data-lang="voltdb" class="step slide">
   <q>
+    <p>
+      <a href="http://voltdb.com/products-services/downloads">
+        <img src="images/voltdb-gs.png" alt="Getting Started with VoltDB">
+      </a>
+    </p>
   </q>
 </div>
